dsa/topic-wise/01: Introduction/01. Output & Variables/examples/predictTheOutput03.cpp
#include <iostream>
using namespace std;
int main()
{
    float a = 5, b = 2;
    int c;
    c = a % b; // error: we can't perform modulus on float data type, language dependent.
    cout << c; // 1
    return 0;
}